[gd_scene load_steps=24 format=2]

[ext_resource path="res://assets/images/RPSHands/scissors-animation 1-000.png" type="Texture" id=1]
[ext_resource path="res://assets/images/RPSHands/rock-rock-000.png" type="Texture" id=2]
[ext_resource path="res://assets/images/RPSHands/paper-paper-000.png" type="Texture" id=3]
[ext_resource path="res://assets/images/UI/backbutton-animation 1-000.png" type="Texture" id=4]
[ext_resource path="res://assets/images/UI/boxes.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/josefinsans-bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/GraphicNodes/player_s.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/images/player/playerviewbubble-animation 1-000.png" type="Texture" id=8]
[ext_resource path="res://scripts/RPS_UI.gd" type="Script" id=9]
[ext_resource path="res://assets/images/RPSHands/girlhand-scissors-000.png" type="Texture" id=10]
[ext_resource path="res://assets/images/RPSHands/playerhand-paper-000.png" type="Texture" id=11]
[ext_resource path="res://assets/images/RPSHands/playerhand-rock-000.png" type="Texture" id=12]
[ext_resource path="res://assets/images/RPSHands/girlhand-rock-000.png" type="Texture" id=13]
[ext_resource path="res://assets/images/RPSHands/girlhand-paper-000.png" type="Texture" id=14]
[ext_resource path="res://assets/images/RPSHands/playerhand-scissors-000.png" type="Texture" id=15]
[ext_resource path="res://assets/images/localUI/EN/comparebutton-strip-000.png" type="Texture" id=16]
[ext_resource path="res://assets/images/localUI/EN/comparebutton-tryagain-000.png" type="Texture" id=17]
[ext_resource path="res://assets/images/localUI/EN/comparebutton-undressher-000.png" type="Texture" id=18]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "rock",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "paper",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "scissors",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "rock",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "paper",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "scissors",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=4]
size = 36
font_data = ExtResource( 6 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "draw",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "win",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "lose",
"speed": 5.0
} ]

[node name="RPS_UI" type="Node2D"]
script = ExtResource( 9 )

[node name="dialogue" type="Node2D" parent="."]

[node name="box_s" type="Sprite" parent="dialogue"]
position = Vector2( 640, 608 )
scale = Vector2( 0.689231, 0.573134 )
texture = ExtResource( 5 )

[node name="box_t" type="Label" parent="dialogue"]
margin_left = 224.0
margin_top = 536.0
margin_right = 1064.0
margin_bottom = 680.0
custom_fonts/font = SubResource( 1 )
text = "TEXT HERE HOLY SHIT"
autowrap = true

[node name="box_b" type="Button" parent="dialogue"]
margin_left = 192.0
margin_top = 512.0
margin_right = 1088.0
margin_bottom = 704.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="hand_box" type="Node2D" parent="."]

[node name="hand_box2" type="Sprite" parent="hand_box"]
position = Vector2( 128, 64 )
scale = Vector2( 0.0984615, 1.12239 )
texture = ExtResource( 5 )
centered = false

[node name="rock" type="Sprite" parent="hand_box"]
position = Vector2( 192, 144 )
texture = ExtResource( 2 )

[node name="paper" type="Sprite" parent="hand_box"]
position = Vector2( 192, 256 )
texture = ExtResource( 3 )

[node name="scissors" type="Sprite" parent="hand_box"]
position = Vector2( 192, 360 )
texture = ExtResource( 1 )

[node name="rock_b" type="Button" parent="hand_box"]
margin_left = 144.0
margin_top = 96.0
margin_right = 240.0
margin_bottom = 200.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Paper_b" type="Button" parent="hand_box"]
margin_left = 144.0
margin_top = 208.0
margin_right = 240.0
margin_bottom = 312.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="scissors_b" type="Button" parent="hand_box"]
margin_left = 144.0
margin_top = 312.0
margin_right = 240.0
margin_bottom = 416.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="back" type="Node2D" parent="."]

[node name="back_s" type="Sprite" parent="back"]
position = Vector2( 80, 640 )
scale = Vector2( 0.33, 0.33 )
texture = ExtResource( 4 )

[node name="back_b" type="Button" parent="back"]
margin_top = 576.0
margin_right = 128.0
margin_bottom = 720.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="player" type="Node2D" parent="."]

[node name="bubble" type="Sprite" parent="player"]
position = Vector2( 1072, 328 )
scale = Vector2( 0.42, 0.48 )
texture = ExtResource( 8 )

[node name="cheater" type="Label" parent="player"]
visible = false
margin_left = 896.0
margin_top = 16.0
margin_right = 1262.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 1 )
text = "DON'T CHEAT ASSHOLE"

[node name="player_b" parent="player" instance=ExtResource( 7 )]
position = Vector2( 1080, 320 )
scale = Vector2( 0.5, 0.5 )
frame = 4

[node name="cheat_b" type="Button" parent="player"]
margin_left = 1024.0
margin_top = 216.0
margin_right = 1136.0
margin_bottom = 416.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="compare" type="Node2D" parent="."]
visible = false

[node name="overlay" type="ColorRect" parent="compare"]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 0.686275 )

[node name="player_hand" type="AnimatedSprite" parent="compare"]
position = Vector2( 448, 344 )
scale = Vector2( 0.42, 0.42 )
frames = SubResource( 2 )
animation = "scissors"

[node name="girl_hand" type="AnimatedSprite" parent="compare"]
position = Vector2( 832, 344 )
scale = Vector2( 0.42, 0.42 )
frames = SubResource( 3 )
animation = "rock"
flip_h = true

[node name="compar_t" type="Label" parent="compare"]
margin_left = 536.0
margin_top = 104.0
margin_right = 735.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 4 )
text = "BUTTHOLE"

[node name="strip_s" type="AnimatedSprite" parent="compare"]
position = Vector2( 640, 608 )
frames = SubResource( 5 )
animation = "lose"

[node name="strip_b" type="Button" parent="compare"]
margin_left = 464.0
margin_top = 552.0
margin_right = 816.0
margin_bottom = 664.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[connection signal="pressed" from="dialogue/box_b" to="." method="_on_box_b_pressed"]
[connection signal="pressed" from="hand_box/rock_b" to="." method="_on_rock_b_pressed"]
[connection signal="pressed" from="hand_box/Paper_b" to="." method="_on_Paper_b_pressed"]
[connection signal="pressed" from="hand_box/scissors_b" to="." method="_on_scissors_b_pressed"]
[connection signal="pressed" from="back/back_b" to="." method="_on_back_b_pressed"]
[connection signal="pressed" from="player/cheat_b" to="." method="_on_cheat_b_pressed"]
[connection signal="pressed" from="compare/strip_b" to="." method="_on_strip_b_pressed"]
